# mag_risk_engine_python

./: LICENSE  README.md  pyproject.toml  pytest.ini
docs/: .gitkeep
examples/: .gitkeep  analytic_pfe_profile_example.py  cashflow_pv_example.py  example_resolving_running_issue.py  fx_option_gk_example.py  fx_vol_surface_example.py  historical_var_example.py  monte_carlo_pfe_profile_example.py  monte_carlo_pfe_profile_visual_example.py  monte_carlo_var_example.py  new_arch_minimal_example_FXSwap.py  new_arch_minimal_example_FixedRateBond.py  new_arch_minimal_example_IRS.py  new_arch_minimal_example_fixedLeg.py  portfolio_pricing_example.py  portfolio_var_from_returns_example.py  scenario_pfe_profile_example.py  scenario_pfe_three_positions_example.py
examples/.mplconfig/: fontlist-v390.json
examples/old_architecture_example/: analytic_pfe_profile_example.py  black_scholes_example.py  cashflow_pv_example.py  commodities_instruments_example.py  credit_instruments_example.py  equity_instruments_example.py  exotic_instruments_example.py  fx_instruments_example.py  parametric_var_example.py  portfolio_parametric_var_example.py  portfolio_pricing_example.py  (+4 more)
notebooks/: .gitkeep  dunder_futures_annotations_import.ipynb
risk_engine/: __init__.py
tests/: .gitkeep  conftest.py  test_black_scholes.py  test_cashflows.py  test_curve_set_market_risk.py  test_curves.py  test_fx_gk.py  test_fx_swap_pricer.py  test_fx_vol_surface.py  test_instrument_sets.py  test_market_curve_validation.py  test_pfe.py  test_portfolio_engine.py  test_vanilla_pricing.py  test_var.py
(+176 files in other folders)
